fix : alignment

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ pre code {
     background-color: rgb(239, 230, 230);
     border: 1px solid rgb(198, 186, 186);
     display: block;
-    padding: 20px;
+    padding: 0px;
     text-align: left;
   }
 
